# coinglass-mcp

./: .gitignore  README.md  pyproject.toml
docs/: 01-overview.md  02-api-specification.md  03-architecture.md  04-tools-market.md  05-tools-derivatives.md  06-tools-liquidation.md  07-tools-whale-taker.md  08-tools-spot-options.md  09-tools-etf-indicators.md  10-tools-meta.md  11-core-components.md  12-deployment.md  13-implementation-plan.md
src/coinglass_mcp/: __init__.py  client.py  config.py  server.py
tests/: conftest.py  test_client.py  test_tools.py
